# umagpt

./: .gitignore  package.json
src/: App.vue  main.ts  style.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: chat.rs  collection.rs  db.rs  llm.rs  mod.rs  models.rs  system.rs
src-tauri/src/db/: schema.sql
src-tauri/src/llm_provider/: llama_server.rs  mod.rs  remote.rs
src-tauri/src/models/: mod.rs
src/components/: ErrorModal.vue  SidePanel.vue
src/stores/: chat.ts  collection.ts  models.ts  plan.ts  system.ts
src/views/: ChatView.vue  HistoryView.vue  ModelsView.vue  MyCardsView.vue  MyTraineesView.vue  RaceTableView.vue  SettingsView.vue  TeamTrialsView.vue
