[package]
name = "umagpt"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "umagpt_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.2", features = ["json", "stream"] }
futures-util = "0.3.32"
tauri-plugin-store = "2.0.0-rc.0"
tokio = { version = "1.50.0", features = ["sync", "rt", "macros"] }
which = "8.0.2"
dirs = "6.0.0"
uuid = { version = "1.22.0", features = ["v4"] }
chrono = { version = "0.4.44", features = ["serde"] }
async-trait = "0.1.89"
tauri-plugin-dialog = "2.0.0-rc.0"

[dev-dependencies]
tempfile = "3.27.0"

